# BRKCHRD

./: .gitignore  .sync-v040  CMakeLists.txt  LICENSE  NOTICE.md  README.md  THIRD_PARTY_NOTICES.md  pak.json
.github/workflows/: apply-effect-reset-fix.yml  apply-hardware-feedback.yml  apply-pr1-safety.yml  apply-ui-themes-fixed.yml  apply-ui-themes.yml  apply-v020-product.yml  apply-v030-ui.yml  apply-v040.yml  apply-v050.yml  apply-v051.yml  build.yml  publish-v060.yml  release-v051.yml  sync-v030-branch.yml
docs/: alpha-test-checklist.md  architecture.en.md  architecture.ru.md  controls.en.md  controls.ru.md  development.en.md  development.ru.md  hardware-test-checklist.en.md  hardware-test-checklist.ru.md  install.en.md  install.nextui.en.md  install.nextui.ru.md  install.ru.md  licensing.en.md  licensing.ru.md  manual.en.md  manual.ru.md  release-v0.6.0.md  research-and-workflow.md  sound-design.en.md  sound-design.ru.md  troubleshooting.en.md  troubleshooting.ru.md
docs/releases/: v0.5.1.md
include/brkchrd/: config.hpp  input_safety.hpp  music.hpp  synth.hpp
packaging/nextui/tg5040/BRKCHRD.pak/: README.md  launch.sh
packaging/portmaster/brkchrd/: BRKCHRD.sh  README.md  gameinfo.xml  install_metadata.sh  port.json
release-trigger/: v0.5.1  v0.5.1-r2
src/: config.cpp  input_safety.cpp  music.cpp  sdl_main.cpp  sdl_main_part1.inc  sdl_main_part2.inc  sdl_main_part3.inc  synth.cpp  ui_i18n.hpp
tests/: test_main.cpp
tools/: apply-audio-path-hardening.py  apply-exhaustive-audio-audit.py  apply-second-hardware-feedback.py  apply-ui-themes-fixed.py  apply-ui-themes.py  apply_effect_reset_fix.py  apply_hardware_feedback.py  apply_pr1_safety.py  apply_v050.py  apply_v050.trigger  apply_v050.trigger10  apply_v050.trigger2  apply_v050.trigger3  apply_v050.trigger4  apply_v050.trigger5  apply_v050.trigger6  apply_v050.trigger7  apply_v050.trigger8  apply_v050.trigger9  audio_audit.cpp  migrate_v052.py  package_nextui.sh  package_portmaster.sh  render_demo.cpp  v020-diagnostics.txt  v051-apply.py.gz.b64  v051-ui.patch  v051.trigger  v051.trigger2  v052.trigger
tools/v020parts/: part-00  part-01  part-02  part-03  part-04  part-05  part-06  part-07  part-08  part-09  part-0900  part-0901  part-0902  part-0903
tools/v030parts/: part-00  part-01  part-02  part-03
tools/v040parts/: part-00  part-01  part-02  part-03  part-040  part-041  part-050  part-051
tools/v040source/: READY  READY2  READY3  READY4  src-00  src-01  src-02  src-03  src-04  src-05  src-06  src-07  src-08  src-09  src-10  src-11
