cmake_minimum_required(VERSION 3.16)
project(brkchrd VERSION 0.5.2 LANGUAGES CXX)

option(BRKCHRD_BUILD_SDL "Build SDL2 handheld application" ON)
option(BRKCHRD_BUILD_TESTS "Build tests" ON)
option(BRKCHRD_ENABLE_SANITIZERS "Enable AddressSanitizer and UndefinedBehaviorSanitizer" OFF)

add_library(brkchrd_warnings INTERFACE)
if(MSVC)
  target_compile_options(brkchrd_warnings INTERFACE /W4)
else()
  target_compile_options(brkchrd_warnings INTERFACE -Wall -Wextra -Wpedantic -Wshadow -Wconversion)
endif()

add_library(brkchrd_sanitizers INTERFACE)
if(BRKCHRD_ENABLE_SANITIZERS AND NOT MSVC)
  target_compile_options(brkchrd_sanitizers INTERFACE -fno-omit-frame-pointer -fsanitize=address,undefined)
  target_link_options(brkchrd_sanitizers INTERFACE -fno-omit-frame-pointer -fsanitize=address,undefined)
endif()

add_library(brkchrd_core src/config.cpp src/input_safety.cpp src/music.cpp src/synth.cpp)
target_include_directories(brkchrd_core PUBLIC include)
target_compile_features(brkchrd_core PUBLIC cxx_std_20)
target_link_libraries(brkchrd_core PRIVATE brkchrd_warnings brkchrd_sanitizers)

add_executable(brkchrd-render tools/render_demo.cpp)
target_link_libraries(brkchrd-render PRIVATE brkchrd_core brkchrd_warnings brkchrd_sanitizers)

add_executable(brkchrd-audio-audit tools/audio_audit.cpp)
target_link_libraries(brkchrd-audio-audit PRIVATE brkchrd_core brkchrd_warnings brkchrd_sanitizers)

if(BRKCHRD_BUILD_TESTS)
  enable_testing()
  add_executable(brkchrd-tests tests/test_main.cpp)
  target_link_libraries(brkchrd-tests PRIVATE brkchrd_core brkchrd_warnings brkchrd_sanitizers)
  add_test(NAME brkchrd-tests COMMAND brkchrd-tests)
endif()

if(BRKCHRD_BUILD_SDL)
  find_package(SDL2 QUIET)
  if(NOT TARGET SDL2::SDL2)
    find_package(PkgConfig QUIET)
    if(PkgConfig_FOUND)
      pkg_check_modules(SDL2 QUIET IMPORTED_TARGET sdl2)
    endif()
  endif()
  if(TARGET SDL2::SDL2)
    set(BRKCHRD_SDL_TARGET SDL2::SDL2)
  elseif(TARGET PkgConfig::SDL2)
    set(BRKCHRD_SDL_TARGET PkgConfig::SDL2)
  endif()
  if(BRKCHRD_SDL_TARGET)
    add_executable(brkchrd-sdl src/sdl_main.cpp)
    target_link_libraries(brkchrd-sdl PRIVATE brkchrd_core ${BRKCHRD_SDL_TARGET} brkchrd_warnings brkchrd_sanitizers)
    if(TARGET SDL2::SDL2main)
      target_link_libraries(brkchrd-sdl PRIVATE SDL2::SDL2main)
    endif()
  else()
    message(WARNING "SDL2 not found; brkchrd-sdl will not be built")
  endif()
endif()
